--- a/pug/modules/_aside.pug
+++ b/pug/modules/_aside.pug
@@ -1,6 +1,18 @@
 #leftNavigationPseudo.left-navigation-pseudo.collapse.show
 include ../vidgets/_tabvidget-01
 
+include ../vidgets/_vidget-calendar
+
+//- include ../vidgets/_tabvidget-02
+
+include ../vidgets/_vidget-slider
+
+include ../vidgets/_tabvidget-03
+
+include ../vidgets/_vidget-01
+
+include ../vidgets/_vidget-02
+
 include ../vidgets/_count
 
 include ../vidgets/_counts
@@ -8,13 +20,3 @@ include ../vidgets/_counts
 include ../vidgets/_vidget-danger
 
 include ../vidgets/_vidget-succes
-
-include ../vidgets/_vidget-calendar
-
-include ../vidgets/_tabvidget-02
-
-include ../vidgets/_tabvidget-03
-
-include ../vidgets/_vidget-01
-
-include ../vidgets/_vidget-02
