--- a/sass/general/_deafult.scss
+++ b/sass/general/_deafult.scss
@@ -222,3 +222,32 @@ section, .section {
 		text-decoration: underline;
 	}
 }
+
+.slider-arrow {
+	position: absolute;
+	z-index: 10;
+	top: 0;
+	width: 15px;
+	// width: 30px;
+	height: 100%;
+	background-color: rgba($light-color, 0.1);
+	cursor: pointer;
+	transition: 0.4s;
+	&__left {
+		left: 7.5px;
+		border-radius: 5px 0 0 5px;
+		background: rgba($light-color, 0.4) url(../img/icon/slider-arrow-left.svg) center no-repeat / 50%;
+		@include hover {
+			background-color: rgba($light-color, 0.85);
+		}
+
+	}
+	&__right {
+		right: 7.5px;
+		border-radius: 0 5px 5px 0;
+		background: rgba($light-color, 0.4) url(../img/icon/slider-arrow-right.svg) center no-repeat / 50%;
+		@include hover {
+			background-color: rgba($light-color, 0.85);
+		}
+	}
+}
