vidget calendar + news slider
Добавил в алендарь автопоказ текущей даты
Добавил виджет слайдер
Добавил блоки новостей слайдеры
Пофиксил скролл

--- a/pug/index.pug
+++ b/pug/index.pug
@@ -5,7 +5,11 @@ block content
 
 	include page/_page-head-filters
 
-	include cards/_card-full
+	include cards/_card-full-advant-news
+
+	include cards/_card-full-slider
+
+	include cards/_card-half-slider
 
 	include cards/_cards-third
 
