--- a/pug/vidgets/_vidget-calendar.pug
+++ b/pug/vidgets/_vidget-calendar.pug
@@ -62,8 +62,8 @@
 						a.ui-state-deafult.ui-state-week(href="#") 04
 					td
 						a.ui-state-default(href="#") 19
-					td.ui-datepicker-today
-						a.ui-state-default(href="#") 20
+					td.ui-datepicker-today.selected
+						a.ui-state-default.ui-state-active(href="#event-20") 20
 					td
 						a.ui-state-default(href="#") 21
 					td
@@ -89,19 +89,6 @@
 						a.ui-state-default(href="#") 30
 					td.ui-datepicker-week-end.ui-datepicker-other-month.ui-datepicker-unselectable.ui-state-disabled  
 					td.ui-datepicker-week-end.ui-datepicker-other-month.ui-datepicker-unselectable.ui-state-disabled  
-	#event-14.events
-		a.event(href="calendar2.html#event1-14-10-2018")
-			.event-title
-				span 1 День великого праздника в две строки
-			.vidget-imgbox.vidget-imgbox_calendar(style="background-image: url(img/event-img-01.jpg);")
-		a.event(href="calendar2.html#event2-14-10-2018")
-			.event-title
-				span 2 День великого праздника в две строки
-			.vidget-imgbox.vidget-imgbox_calendar(style="background-image: url(img/event-img-01.jpg);")
-		a.event(href="calendar2.html#event3-14-10-2018")
-			.event-title
-				span 3 День великого праздника в две строки
-			.vidget-imgbox.vidget-imgbox_calendar(style="background-image: url(img/event-img-01.jpg);")
 	#event-6.events
 		a.event(href="calendar.html#event1-06-10-2018")
 			.event-title
@@ -115,6 +102,24 @@
 			.event-title
 				span День металлурга 2
 			.vidget-imgbox.vidget-imgbox_calendar(style="background-image: url(img/article-img-01.jpg);")
+	#event-14.events
+		a.event(href="calendar2.html#event1-14-10-2018")
+			.event-title
+				span 1 День великого праздника в две строки
+			.vidget-imgbox.vidget-imgbox_calendar(style="background-image: url(img/event-img-01.jpg);")
+		a.event(href="calendar2.html#event2-14-10-2018")
+			.event-title
+				span 2 День великого праздника в две строки
+			.vidget-imgbox.vidget-imgbox_calendar(style="background-image: url(img/event-img-01.jpg);")
+		a.event(href="calendar2.html#event3-14-10-2018")
+			.event-title
+				span 3 День великого праздника в две строки
+			.vidget-imgbox.vidget-imgbox_calendar(style="background-image: url(img/event-img-01.jpg);")
+	#event-20.events
+		a.event(href="calendar2.html#event1-24-10-2018")
+			.event-title
+				span День поедателей йогуртов
+			.vidget-imgbox.vidget-imgbox_calendar(style="background-image: url(img/article-img-02.jpg);")
 	#event-24.events
 		a.event(href="calendar2.html#event1-24-10-2018")
 			.event-title
