--- a/pug/blocks/_block-blog.pug
+++ b/pug/blocks/_block-blog.pug
@@ -8,14 +8,41 @@
 		.content-title
 			.content-titlebox
 				h2 Блоги 2018
+	include ../cards/_cards-third-slider
+
+	.card.cardFull-head_special
+		.content-title
+			.content-titlebox
+				h2 Лучшие блогеры тысячелетия
+	include ../cards/_cards-fifth-slider
 	.card
-		.sliderBlog
-			.sliderBlog-box
-				.sliderBlog-item
-					
-			.sliderBlog-box
-				.sliderBlog-item
-					
-			.sliderBlog-box
-				.sliderBlog-item
-					
+		hr.card-hr
+	article(id=ID).article.articlePreview
+		.card
+			.article-imgwrap.article-imgwrap_slim
+				.article-imgbox.article-imgbox_slim(style='background-image: url(img/article-prev-img-01.jpg);')
+			- var text = '24 Сентября 2018, Мацинова Елена';
+			include ../modules/_tag-box
+
+			.content-title
+				.article-title.content-titlebox
+					h3 Хочется лета, а вокруг одни офисы! Поеду на Ямайку!
+
+			.article-text.articlePreview-text
+				p
+					| Ямайка находится в зоне тропического климата с господством северо-восточных пассатов, заметно влияющих, наравне с показателем абсолютной высоты местности, на климат страны В столичном районе средняя температура за год меняется от 24 до 27 °C, а в местечке Гордон-Хилл в горах Блу-Маунтинс — от температура температура температура
+	article(id=ID).article.articlePreview
+		.card
+			.article-imgwrap.article-imgwrap_slim
+				.article-imgbox.article-imgbox_slim(style='background-image: url(img/article-prev-img-02.jpg);')
+			- var text = '24 Сентября 2018, Мацинова Елена';
+			include ../modules/_tag-box
+			.content-title
+				.article-title.content-titlebox
+					h3 Как вам прошедший концерт?
+
+			.article-text.articlePreview-text
+				p
+					| Ямайка находится в зоне тропического климата с господством северо-восточных пассатов, заметно влияющих, наравне с показателем абсолютной высоты местности, на климат страны В столичном районе средняя температура за год меняется от 24 до 27 °C, а в местечке Гордон-Хилл в горах Блу-Маунтинс — от...
+	.card
+		hr.card-hr
