--- a/pug/modules/_aside.pug
+++ b/pug/modules/_aside.pug
@@ -1,11 +1,13 @@
 #leftNavigationPseudo.left-navigation-pseudo.collapse.show
-include ../vidgets/_tabvidget-01
+//- include ../vidgets/_tabvidget-01
+
+include ../vidgets/_vidget-slider-01
 
 include ../vidgets/_vidget-calendar
 
 //- include ../vidgets/_tabvidget-02
 
-include ../vidgets/_vidget-slider
+include ../vidgets/_vidget-slider-02
 
 include ../vidgets/_tabvidget-03
 
