--- a/pug/vidgets/_vidget-slider-02.pug
+++ b/pug/vidgets/_vidget-slider-02.pug
@@ -1,7 +1,7 @@
 // VIDGET-SLIDER
 .vidget-slider-wrap 
 	.vidget-box.vidget-tabbox.vidget-slider
-		#vidget2-tab3.vidget-tab.vidget-slider__tab.fade-
+		#vidget2-tab3.vidget-tab.vidget-slider__tab
 			.vidget-content.vidget-slider__content
 				.vidget-content__left
 					.vidget-head
@@ -26,7 +26,7 @@
 				.vidget-content__right
 					.vidget-imgbox
 						img(src="img/vidget-img-07.jpg" alt="image")
-		#vidget2-tab2.vidget-tab.vidget-slider__tab.fade- 
+		#vidget2-tab2.vidget-tab.vidget-slider__tab 
 			.vidget-content.vidget-slider__content
 				.vidget-content__left
 					.vidget-head
@@ -52,7 +52,7 @@
 				.vidget-content__right
 					.vidget-imgbox
 						img(src="img/vidget-img-05.png" alt="image")
-		#vidget2-tab1.vidget-tab.vidget-slider__tab.fade-
+		#vidget2-tab1.vidget-tab.vidget-slider__tab
 			.vidget-content.vidget-slider__content
 				.vidget-content__left
 					.vidget-head
