--- a/pug/modules/_aside.pug
+++ b/pug/modules/_aside.pug
@@ -9,7 +9,9 @@ include ../vidgets/_vidget-calendar
 
 include ../vidgets/_vidget-slider-02
 
-include ../vidgets/_tabvidget-03
+include ../vidgets/_vidget-slider-03
+
+//- include ../vidgets/_tabvidget-03
 
 include ../vidgets/_vidget-01
 
