--- a/pug/vidgets/_vidget-slider-01.pug
+++ b/pug/vidgets/_vidget-slider-01.pug
@@ -1,8 +1,8 @@
-// VIDGET-SLIDER
+// VIDGET-SLIDER Пресса
 .vidget-slider-wrap 
-	.vidget-box.vidget-tabbox.vidget-slider
-		#vidget1-tab1.tab-pane.vidget-tab.vidget-slider__tab
-			.vidget-content
+	.vidget-box.vidget-tabbox.vidget-slider(data-slick='{"autoplaySpeed": 4000}')
+		#vidget1-tab1.vidget-tab.vidget-slider__tab
+			.vidget-content.vidget-slider__content
 				.vidget-content__left
 					.vidget-head
 						.vidget-title
@@ -17,8 +17,8 @@
 				.vidget-content__right
 					.vidget-imgbox
 						img(src="img/vidget-img-01.jpg" alt="image")
-		#vidget1-tab2.tab-pane.vidget-tab.vidget-slider__tab
-			.vidget-content
+		#vidget1-tab2.vidget-tab.vidget-slider__tab
+			.vidget-content.vidget-slider__content
 				.vidget-content__left
 					.vidget-head
 						.vidget-title
@@ -33,8 +33,8 @@
 				.vidget-content__right
 					.vidget-imgbox
 						img(src="img/vidget-img-02.jpg" alt="image")
-		#vidget1-tab3.tab-pane.vidget-tab.vidget-slider__tab
-			.vidget-content
+		#vidget1-tab3.vidget-tab.vidget-slider__tab
+			.vidget-content.vidget-slider__content
 				.vidget-content__left
 					.vidget-head
 						.vidget-title
