--- a/pug/vidgets/_vidget-slider-02.pug
+++ b/pug/vidgets/_vidget-slider-02.pug
@@ -1,6 +1,6 @@
-// VIDGET-SLIDER
+// VIDGET-SLIDER Доска \ Дни \ Назначения
 .vidget-slider-wrap 
-	.vidget-box.vidget-tabbox.vidget-slider
+	.vidget-box.vidget-tabbox.vidget-slider(data-slick='{"autoplaySpeed": 6000}')
 		#vidget2-tab3.vidget-tab.vidget-slider__tab
 			.vidget-content.vidget-slider__content
 				.vidget-content__left
