--- a/sass/_cards.scss
+++ b/sass/_cards.scss
@@ -147,6 +147,13 @@
 		}
 	}
 
+	&-hr {
+		border: none;
+		height: 1px;
+		background-color: #707070;
+		opacity: 0.4;
+	}
+
 	&-slider {
 		overflow: hidden;
 		margin-left: 15px;
@@ -366,6 +373,41 @@
 					right: 7.5px;
 				}
 			}
+		}
+	}
+}
+.card-links{
+	&-wrap {
+		display: flex;
+	}
+	&__img {
+		max-width: 100px;
+		padding-left: 15px;
+		padding-right: 15px;
+		text-align: center;
+	}
+	&__items {
+		padding-left: 15px;
+	}
+	&__lnkbox {
+		color: $dark-color;
+		font-family: "PT Serif";
+		font-size: 20px;
+		font-weight: 400;
+		line-height: 20px;
+		margin-bottom: 5px;
+		&:last-child {
+			margin-bottom: 0;
+		}
+	}
+	& a {
+		color: inherit;
+		font-size: 1em;
+		font-weight: inherit;
+		transition: color 0.2s;
+		@include hover {
+			color: #000000;
+			text-decoration: underline;
 		}
 	}
 }
