--- a/sass/general/_buttons.scss
+++ b/sass/general/_buttons.scss
@@ -43,6 +43,19 @@
 }
 
 
+.link-big {
+	color: $basic-color;
+	font-family: Roboto;
+	font-size: 32px;
+	font-weight: 700;
+	line-height: 40px;
+	@include hover {
+		text-decoration: underline;
+		color: darken($basic-color, 20);
+	}
+}
+
+
 // кнопка с заливкой
 .button {
 	display: inline-block;
