--- a/pug/post.pug
+++ b/pug/post.pug
@@ -5,12 +5,12 @@ block content
 	.card.cardFull-head_special
 	.cards
 		article(id=ID).article
-			.card.cardFull-head_special
+			.card.card_slim
 				.article-imgwrap.article-imgwrap_slim
 					.article-imgbox.article-imgbox_head(style='background-image: url(img/post-img-01.jpg);')
 				- var text = '24 Сентября 2018';
 				include modules/_tag-box
-			.card.cardFull-head_special
+			.card.card_slim
 				.content-title
 					.content-titlebox
 						h3 Более 10,6 млн тонн рулонного проката произвел литейно-прокатный комплекс ВМЗ за 10 лет работы
@@ -48,6 +48,81 @@ block content
 						a.hashtag(href='#')= item
 					p Автор статьи: Елена Мацинова
 	.card
+		include modules/_tag-box
+	.card
+		hr.card-hr
+	.card.card_slim
 		.content-title
 			.content-titlebox
 				h2 Комментарии
+	.card.card_slim
+		- var items = [];
+		- items.push({url: 'background-image: url(img/person-photo-01.jpg)', title: 'ЮЛИЯ ШХИЯНЦ', text: 'В ходе горячих испытаний оборудования покрытие из УФ-лака было нанесено на гладкие трубы диаметром 426 мм. Параллельно с пуско-наладкой оборудования специалисты фирмы Venjakob провели теоретическое и практическое обучение работе с установкой для сотрудников ВМЗ, включая ремонтные службы, технологов и автоматчиков.'});
+		- items.push({url: 'background-image: url(img/person-photo-02.jpg)', title: 'ПЕТР ТУШИН', text: 'Параллельно с пуско-наладкой оборудования специалисты фирмы Venjakob провели теоретическое и практическое обучение работе с установкой для сотрудников ВМЗ.'});
+		- items.push({url: 'background-image: url(img/person-photo-03.jpg)', title: 'СВЕТЛАНА НИКОЛАШИНА', text: 'Мы стремимся к тому, чтобы работа в ОМК помогала сотрудникам компании реализовывать свой потенциал и раскрывать свои способности Активно развиваясь, Компания делает реальными перспективы профессионального и карьерного роста. Для обеспечения взаимовыгодного партнерства и соблюдения трудовых прав мы активно поддерживаем и развиваем социальный диалог с сотрудниками и их представителями. Читать подробнее о работе с персоналом. Мы разработали специальную форму − Приложение к договору «Требование о соблюдении законодательства в области охраны труда, промышленной, пожарной безопасности, охраны окружающей среды». Подписывая его, подрядчик обязуется следовать процедурам, правилам и инструкциям ОМК в области охраны труда, промышленной, экологической и экономической безопасности с целью исключения или минимизации возможного ущерба, наносимого окружающей среде, здоровью сотрудников ОМК, посетителей и третьих лиц.'});
+		.comment
+			.comment-box
+				.comment__avatar(style= items[0].url)
+				.comment__content
+					.tagbox.comment__tagbox
+						.tag
+							.comment__nickname
+								span= items[0].title
+						.like-card
+							button.like-button.comment-button.like-button_thin
+								i #
+								span.like-count 120
+							button.like-button.like-button_thin
+								i.icon-like
+								span.like-count 86
+
+					.comment__date
+							span 12 Декабря 2018, 16:32
+					.comment__text
+						p= items[0].text
+					.comment__link
+						a(href="#") Ответить
+			.comment
+				.comment-box
+					.comment__avatar(style= items[1].url)
+					.comment__content
+						.tagbox.comment__tagbox
+							.tag
+								.comment__nickname
+									span= items[1].title
+							.like-card
+								button.like-button.comment-button.like-button_thin
+									i #
+									span.like-count 120
+								button.like-button.like-button_thin
+									i.icon-like
+									span.like-count 86
+
+						.comment__date
+								span 12 Декабря 2018, 16:32
+						.comment__text
+							p= items[1].text
+						.comment__link
+							a(href="#") Ответить
+				.comment
+					.comment-box
+						.comment__avatar(style= items[2].url)
+						.comment__content
+							.tagbox.comment__tagbox
+								.tag
+									.comment__nickname
+										span= items[2].title
+								.like-card
+									button.like-button.comment-button.like-button_thin
+										i #
+										span.like-count 120
+									button.like-button.like-button_thin
+										i.icon-like
+										span.like-count 86
+
+							.comment__date
+									span 12 Декабря 2018, 16:32
+							.comment__text
+								p= items[2].text
+							.comment__link
+								a(href="#") Ответить
