--- a/sass/_cards.scss
+++ b/sass/_cards.scss
@@ -22,6 +22,9 @@
 			margin-bottom: 5px;
 		}
 	}
+	&_slim {
+		margin-bottom: 15px;
+	}
 	&_advant-news {
 		border-bottom: 3px solid $dark-color;
 	}
