--- a/pug/cards/_card-calendar.pug
+++ b/pug/cards/_card-calendar.pug
@@ -40,7 +40,7 @@
 					td.calendar__day(data-placement='right', data-toggle='tooltip', data-html='true', title='<p>День металлурга</p> \
 					<p>День поедателей йогуртов</p> \
 					<p>День металлурга 2</p>')
-						a.calendar__link(href='#events-06-10-2018')
+						a.calendar__link(href='calendar.html#events-06-10-2018')
 							p 6
 							span.calendar__caption 3 события
 					td.calendar__day
@@ -62,7 +62,7 @@
 					td.calendar__day(data-placement='right', data-toggle='tooltip', data-html='true', title='<p>День металлурга</p> \
 					<p>День поедателей йогуртов</p> \
 					<p>День металлурга 2</p>')
-						a(href='calendar2.html#events-14-10-2018')
+						a.calendar__link(href='calendar2.html#events-14-10-2018')
 							p 14
 							span.calendar__caption 3 события
 					td.calendar__day.calendar__day_special
@@ -88,7 +88,7 @@
 						div
 							p 23              
 					td.calendar__day.calendar__weekend(data-placement='right', data-toggle='tooltip', data-html='true', title='<p>День поедателей йогуртов</p>')
-						a(href='calendar3.html#events-24-10-2018')
+						a.calendar__link(href='calendar3.html#events-24-10-2018')
 							p 24
 							span.calendar__caption 1 событие
 					td.calendar__day.calendar__weekend.calendar__day_major
