--- a/pug/cards/_card-half-slider.pug
+++ b/pug/cards/_card-half-slider.pug
@@ -1,4 +1,4 @@
-.card.cardHalf.cardHalf-slider
+.card.cardHalf-slider
 	.cardHalf-slider-wrap.card-wrap
 		.cardHalf-slider__item
 			.cardHalf-slider__imgbox.card__imgbox(style='background-image: url(img/card-gif.gif);')
