--- a/pug/modules/_header.pug
+++ b/pug/modules/_header.pug
@@ -203,7 +203,6 @@ header.header
 												i.icon-money
 											.headerNavSystem__link
 												span РОСТЕХ
-									// Системы
 									.col-xl-2.d-table
 										.headerNavSystem-button-inn.header-button-inn.button-inn
 											.nav-more.btn-group
@@ -228,8 +227,7 @@ header.header
 													li.nav-more-list__item
 														a.link.link-nav.nav-more-list__link(href='#') Ширина под самое длинное название с учетом Bold
 											button#headerNavSettingControl.button.header-button.headerNavSystem-button(type='button', data-toggle='collapse', data-target='#headerNavSetting', aria-expanded='false', aria-controls='headerNavSetting') Настройка
-									// /.col-xl-2
-									// Настроки
+								.row
 									.col-xl-7.offset-xl-5
 										#headerNavSetting.nav-setting.collapse
 											h4.nav-setting__title Для настройки вашего меню, выберите нужные иконки:
@@ -434,10 +432,6 @@ header.header
 												.form-checkbox-button-wrap
 													button.button.form-setting-button(type='reset', data-toggle='collapse', data-target='#headerNavSetting') Отмена
 													button.button.form-setting-button(type='submit', data-toggle='collapse', data-target='#headerNavSetting') Применить
-								// /.row
-								// /.headerNavSystem-wrap
-								// /.headerNavSystem
-								// /.container
 	.menu-left-navigation
 		.container
 			.row
@@ -567,5 +561,4 @@ header.header
 								a.breadcrumb__link(href='#') Главная
 								a.breadcrumb__link(href='#') Новости
 							.breadcrumb-back
-								a.breadcrumb__link(href='#') <<Назад
-	// /.content
+								a.breadcrumb__link(href='#') &lt;&lt;Назад
