--- a/pug/vidgets/_vidget-calendar.pug
+++ b/pug/vidgets/_vidget-calendar.pug
@@ -90,38 +90,38 @@
 					td.ui-datepicker-week-end.ui-datepicker-other-month.ui-datepicker-unselectable.ui-state-disabled  
 					td.ui-datepicker-week-end.ui-datepicker-other-month.ui-datepicker-unselectable.ui-state-disabled  
 	#event-6.events
-		a.event(href="calendar.html#event1-06-10-2018")
+		a.event.calendar-lnk(href="calendar.html#events-06-10-2018")
 			.event-title
 				span День металлурга
 			.vidget-imgbox.vidget-imgbox_calendar(style="background-image: url(img/article-img-01.jpg);")
-		a.event(href="calendar.html#event2-06-10-2018")
+		a.event.calendar-lnk(href="calendar.html#event2-06-10-2018")
 			.event-title
 				span День поедателей йогуртов
 			.vidget-imgbox.vidget-imgbox_calendar(style="background-image: url(img/article-img-01.jpg);")
-		a.event(href="calendar.html#event3-06-10-2018")
+		a.event.calendar-lnk(href="calendar.html#event3-06-10-2018")
 			.event-title
 				span День металлурга 2
 			.vidget-imgbox.vidget-imgbox_calendar(style="background-image: url(img/article-img-01.jpg);")
 	#event-14.events
-		a.event(href="calendar2.html#event1-14-10-2018")
+		a.event.calendar-lnk(href="calendar2.html#events-14-10-2018")
 			.event-title
 				span 1 День великого праздника в две строки
 			.vidget-imgbox.vidget-imgbox_calendar(style="background-image: url(img/event-img-01.jpg);")
-		a.event(href="calendar2.html#event2-14-10-2018")
+		a.event.calendar-lnk(href="calendar2.html#event2-14-10-2018")
 			.event-title
 				span 2 День великого праздника в две строки
 			.vidget-imgbox.vidget-imgbox_calendar(style="background-image: url(img/event-img-01.jpg);")
-		a.event(href="calendar2.html#event3-14-10-2018")
+		a.event.calendar-lnk(href="calendar2.html#event3-14-10-2018")
 			.event-title
 				span 3 День великого праздника в две строки
 			.vidget-imgbox.vidget-imgbox_calendar(style="background-image: url(img/event-img-01.jpg);")
 	#event-20.events
-		a.event(href="calendar2.html#event1-24-10-2018")
+		a.event.calendar-lnk(href="calendar3.html#events-24-10-2018")
 			.event-title
 				span День поедателей йогуртов
 			.vidget-imgbox.vidget-imgbox_calendar(style="background-image: url(img/article-img-02.jpg);")
 	#event-24.events
-		a.event(href="calendar2.html#event1-24-10-2018")
+		a.event.calendar-lnk(href="calendar3.html#events-24-10-2018")
 			.event-title
 				span День поедателей йогуртов
 			.vidget-imgbox.vidget-imgbox_calendar(style="background-image: url(img/article-img-05.jpg);")
