--- a/pug/blocks/_block-links.pug
+++ b/pug/blocks/_block-links.pug
@@ -18,7 +18,7 @@
 					- var items = ['Типа производства по ГОСТ 14.004-83', 'Стадии разработки документов по ГОСТ 3.1102-81', 'Степени детализации описания технологических процессов, установленных по ГОСТ 3.1109-82;', 'Применяемых технологических методов изготовления и ремонта изделий.', 'Типа производства по ГОСТ 14.004-83', 'Стадии разработки документов по ГОСТ 3.1102-81'];
 					each item in items
 						.card-links__lnkbox
-							a.card-links__lnk(href="#")= item
+							a.card-links__lnk(href="")= item
 	.card
 		.card-links
 			.card-links-wrap
@@ -29,7 +29,7 @@
 					- var items = ['Типа производства по ГОСТ 14.004-83', 'Стадии разработки документов по ГОСТ 3.1102-81', 'Степени детализации описания технологических процессов, установленных по ГОСТ 3.1109-82;', 'Применяемых технологических методов изготовления и ремонта изделий.', 'Типа производства по ГОСТ 14.004-83', 'Стадии разработки документов по ГОСТ 3.1102-81'];
 					each item in items
 						.card-links__lnkbox
-							a.card-links__lnk(href="#")= item
+							a.card-links__lnk(href="")= item
 	.card
 		.content-title
 			.content-titlebox
@@ -45,6 +45,6 @@
 					- var items = ['Типа производства по ГОСТ 14.004-83', 'Стадии разработки документов по ГОСТ 3.1102-81', 'Степени детализации описания технологических процессов, установленных по ГОСТ 3.1109-82;', 'Применяемых технологических методов изготовления и ремонта изделий.', 'Типа производства по ГОСТ 14.004-83', 'Стадии разработки документов по ГОСТ 3.1102-81'];
 					each item in items
 						.card-links__lnkbox
-							a.card-links__lnk(href="#")= item
+							a.card-links__lnk(href="")= item
 	.card
-		a.link-big(href="#") &gt;&gt; Галереи
+		a.link-big(href="") &gt;&gt; Галереи
