--- a/sass/_cards.scss
+++ b/sass/_cards.scss
@@ -6,7 +6,7 @@
 }
 .card {
 	padding: 0 15px;
-	width: 100%;
+	// width: 100%;
 	margin-bottom: 30px;
 	@include clearfix;
 	&-wrap {
@@ -15,7 +15,8 @@
 		height: 100%;
 		overflow: hidden;		
 		border-radius: 5px;
-		background: #eeefef center no-repeat / cover;
+		background: #eeefef center no-repeat;
+		background-size: cover;
 		&-head {
 			background-color: transparent;
 			padding: 0;
@@ -31,7 +32,8 @@
 	&__imgbox {
 		position: relative;
 		border-radius: 5px;		
-		background: $light-color center no-repeat / cover;
+		background: $light-color center no-repeat;
+		background-size: cover;
 		overflow: hidden;
 	}
 	&-warning-text {
@@ -239,7 +241,7 @@
 		}
 	}
 	&Third {
-		width: 33.333333%;
+		max-width: 33.333333%;
 		flex: 0 0 33.333333%;
 		&-wrap {
 		}
@@ -277,11 +279,12 @@
 		}
 	}
 	&Half {
-		width: 50%;
+		max-width: 50%;
 		flex: 0 0 50%;
 		&-imgbox {
 			min-height: 260px;
-			background: no-repeat center / cover;
+			background: no-repeat center;
+			background-size: cover;
 		}
 		&_fullHeightImg {
 			color: $light-color;
@@ -321,7 +324,7 @@
 		}
 	}
 	&TwoThirds {
-		width: 66.666667%;
+		max-width: 66.666667%;
 		flex: 0 0 66.666667%;
 		&__imgbox {
 			min-height: 210px;
